solve problem in css

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -299,7 +299,7 @@
 	.title .byline
 	{
 		font-size: 1.1em;
-		color: #6F6F6F#;
+		color: #6F6F6F;
 	}
 
 /*********************************************************************************/
